# Learning-Agentic-AI

./: LICENSE  README.md
CrewAI/city-funfact-flow-project/: pyproject.toml
CrewAI/city-funfact-flow-project/src/city_funfact_flow_project/: FunFact.py  __init__.py
CrewAI/crewai-shopping-cart/: README.md  pyproject.toml
CrewAI/crewai-shopping-cart/src/: Test_LiteLLM.py
CrewAI/crewai-shopping-cart/src/crewai_shopping_cart/: CrewaiShoppingAgent.py  __init__.py
CrewAI/crewai_claculator_agent/: README.md  pyproject.toml  report.md
CrewAI/crewai_claculator_agent/my_crew2/: long_term_memory_storage1.db
CrewAI/crewai_claculator_agent/my_crew2/entity1/: chroma.sqlite3
CrewAI/crewai_claculator_agent/my_crew2/short_term1/: chroma.sqlite3
CrewAI/crewai_claculator_agent/reports/: report.md
CrewAI/crewai_claculator_agent/src/crewai_claculator_agent/: crew.py  main.py
CrewAI/crewai_claculator_agent/src/crewai_claculator_agent/config/: agents.yaml  tasks.yaml
CrewAI/crewai_poem_flow_project/: README.md  poem.txt  pyproject.toml
CrewAI/crewai_poem_flow_project/src/crewai_poem_flow_project/: main.py
CrewAI/crewai_research_agent/: README.md  pyproject.toml  report.md
CrewAI/crewai_research_agent/knowledge/: user_preference.txt
CrewAI/crewai_research_agent/src/crewai_research_agent/: crew.py  main.py
CrewAI/crewai_research_agent/src/crewai_research_agent/config/: agents.yaml  tasks.yaml
CrewAI/crewai_resercher_crew_project/: README.md  pyproject.toml  report.md
CrewAI/crewai_resercher_crew_project/src/crewai_resercher_crew_project/: crew.py  main.py
CrewAI/crewai_shopping_cart_agent/: README.md  inventory_report.md  pyproject.toml  report.md
CrewAI/crewai_shopping_cart_agent/knowledge/: about_company.txt  laptop_dataset.txt  laptop_inventory.txt
CrewAI/crewai_shopping_cart_agent/src/crewai_shopping_cart_agent/: crew.py  main.py  scrap.txt  test.py
CrewAI/crewai_shopping_cart_agent/src/crewai_shopping_cart_agent/config/: agents.yaml  tasks.yaml
CrewAI/crewai_shopping_cart_agent/src/crewai_shopping_cart_agent/tools/: shopping_cart_tools.py
CrewAI/crewai_shopping_cart_agent/src/crewai_shopping_cart_agent/util/: utility_function.py
CrewAI/crewai_shopping_cart_agent_2/: README.md  check_out.md  pyproject.toml  report.md
CrewAI/crewai_shopping_cart_agent_2/knowledge/: inventory_rag_data.txt
CrewAI/crewai_shopping_cart_agent_2/src/crewai_shopping_cart_agent_2/: crew.py  main.py
CrewAI/crewai_shopping_cart_agent_2/src/crewai_shopping_cart_agent_2/config/: agents.yaml  tasks.yaml
CrewAI/crewai_shopping_cart_agent_2/src/crewai_shopping_cart_agent_2/tools/: shopping_cart_tool.py
CrewAI/crewai_shopping_cart_agent_2/src/crewai_shopping_cart_agent_2/util/: utility.py
CrewAI/crewai_shopping_cart_agent_3/: README.md  check_out.md  pyproject.toml  report.md
CrewAI/crewai_shopping_cart_agent_3/src/crewai_shopping_cart_agent_3/: crew.py  main.py
CrewAI/crewai_shopping_cart_agent_3/src/crewai_shopping_cart_agent_3/config/: agents.yaml  tasks.yaml
CrewAI/crewai_tool_calling/: README.md  pyproject.toml
CrewAI/crewai_tool_calling/src/crewai_tool_calling/: crew.py  main.py
CrewAI/crewai_tool_calling/src/crewai_tool_calling/config/: agents.yaml  tasks.yaml
CrewAI/crewai_tool_calling/src/crewai_tool_calling/tools/: weather_tool.py
CrewAI/crewai_unit_converter/: README.md  pyproject.toml  report.md
CrewAI/crewai_unit_converter/src/crewai_unit_converter/: crew.py  main.py
CrewAI/crewai_unit_converter/src/crewai_unit_converter/config/: agents.yaml  tasks.yaml
CrewAI/markdown_validator/: README.md  pyproject.toml  report.md
CrewAI/markdown_validator/src/markdown_validator/: crew.py  main.py
HelloLiteLLM/: README.md  pyproject.toml
HelloLiteLLM/src/hellolitellm/: __init__.py
LiteLLM/HelloLiteLLM/src/hellolitellm/: TestLiteLLM.py
openai-agents/agent_as_tool/: pyproject.toml
openai-agents/agent_as_tool/src/: translator.py
openai-agents/agent_lifecycle/: pyproject.toml
openai-agents/agent_lifecycle/src/agent_lifecycle/: __init__.py  agent_lifecycle_example.py
openai-agents/context_management/: pyproject.toml
openai-agents/context_management/src/: ctx_mgmt.py  ctx_mgmt2.py
openai-agents/context_management/src/context_management/: __init__.py
openai-agents/customer_service/: pyproject.toml
openai-agents/customer_service/src/customer_service/: main.py
openai-agents/dynamic_system_prompt/: pyproject.toml
openai-agents/dynamic_system_prompt/src/dynamic_system_prompt/: __init__.py  dynamic_system_prompt.py
openai-agents/forcing_tool_use/: pyproject.toml
openai-agents/forcing_tool_use/src/forcing_tool_use/: __init__.py  tool_use_choice.py
openai-agents/handoffs/: pyproject.toml
openai-agents/handoffs/src/handoffs/: .env  __init__.py  routing.py
openai-agents/hello_openai/: README.md  pyproject.toml
openai-agents/hello_openai/src/hello_openai/: __init__.py  hello.py
openai-agents/input_guardrails/: pyproject.toml
openai-agents/input_guardrails/src/input_guardrails/: LLMConfig.py  guardrails_on_input.py
openai-agents/llm_as_a_judge/: pyproject.toml  story.md
openai-agents/llm_as_a_judge/src/llm_as_a_judge/: __init__.py  llm_judge.py
openai-agents/output_guardrails/: pyproject.toml
openai-agents/output_guardrails/src/output_guardrails/: math_output_guardrails.py  output_guardrails.py
openai-agents/parallelization/: pyproject.toml
openai-agents/parallelization/src/parallelization/: parallelization.py
openai-agents/story_writer_agent/: pyproject.toml  story.md
openai-agents/story_writer_agent/src/story_writer_agent/: __init__.py  story_generator.py
openai-agents/streaming/: .gitignore  pyproject.toml
openai-agents/streaming/src/streaming/: .env  stream_items.py  stream_text.py
openai-agents/structured_output/: pyproject.toml
openai-agents/structured_output/src/structured_output/: structured_output.py  weather_answer.py
openai-agents/weather_app/: pyproject.toml
openai-agents/weather_app/src/: Weather.py  weather_api.py
(+2 files in other folders)
