[project]
name = "hellolitellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arif-Kasim", email = "arif.rozani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hellolitellm = "hellolitellm:main"
show = "hellolitellm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
