[project]
name = "hellolitellm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arif-Kasim", email = "arif.rozani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.61.20",
]

[project.scripts]
hellolitellm = "hellolitellm:main"
show = "hellolitellm:main"
check = "hellolitellm:TestLiteLLM"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
