[project]
name = "crewai_poem_flow_project"
version = "0.1.0"
description = "crewai-poem-flow-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
kickoff = "crewai_poem_flow_project.main:kickoff"
plot = "crewai_poem_flow_project.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
