[project]
name = "crewai_resercher_crew_project"
version = "0.1.0"
description = "crewai-resercher-crew-project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
crewai_resercher_crew_project = "crewai_resercher_crew_project.main:run"
run_crew = "crewai_resercher_crew_project.main:run"
train = "crewai_resercher_crew_project.main:train"
replay = "crewai_resercher_crew_project.main:replay"
test = "crewai_resercher_crew_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
