[project]
name = "crewai_shopping_cart_agent_2"
version = "0.1.0"
description = "crewai-shopping-cart-agent-2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
crewai_shopping_cart_agent_2 = "crewai_shopping_cart_agent_2.main:run"
run_crew = "crewai_shopping_cart_agent_2.main:run"
train = "crewai_shopping_cart_agent_2.main:train"
replay = "crewai_shopping_cart_agent_2.main:replay"
test = "crewai_shopping_cart_agent_2.main:test"
kickoff = "crewai_shopping_cart_agent_2.main:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
