[project]
name = "crewai_tool_calling"
version = "0.1.0"
description = "crewai-tool-calling using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tool,tools]>=0.102.0,<1.0.0",
    "litellm>=1.60.2",
]

[project.scripts]
crewai_tool_calling = "crewai_tool_calling.main:run"
run_crew = "crewai_tool_calling.main:run"
train = "crewai_tool_calling.main:train"
replay = "crewai_tool_calling.main:replay"
test = "crewai_tool_calling.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
