[project]
name = "crewai_unit_converter"
version = "0.1.0"
description = "crewai-unit-converter using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai-tools>=0.36.0",
    "crewai[tools]>=0.102.0,<1.0.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
crewai_unit_converter = "crewai_unit_converter.main:run"
run_crew = "crewai_unit_converter.main:run"
train = "crewai_unit_converter.main:train"
replay = "crewai_unit_converter.main:replay"
test = "crewai_unit_converter.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
