[project]
name = "markdown_validator"
version = "0.1.0"
description = "markdown-validator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
markdown_validator = "markdown_validator.main:run"
run_crew = "markdown_validator.main:run"
train = "markdown_validator.main:train"
replay = "markdown_validator.main:replay"
test = "markdown_validator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
