[project]
name = "hello-openai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arif-Kasim", email = "arif.rozani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.0.9",
]

[project.scripts]
hello-openai = "hello_openai:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
