[project]
name = "weather-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Arif-Kasim", email = "arif.rozani@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-weather>=2.0.7",
    "rich>=14.0.0",
]

[project.scripts]
weather-app = "weather_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
